- Font tweaks - Section subtitle - Section spacing - Hero H1 spacing issue fixed

--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -13,7 +13,7 @@
 
 .hero h1 {
 	max-width: 1200px;
-	margin-left: auto;
+	margin-left: 0;
 	margin-right: auto;
 	color: var(--background-color);
 	font-size: 4.5rem;
