--- a/styles/styles.css
+++ b/styles/styles.css
@@ -63,8 +63,8 @@
     --body-font-size-xs: 14px;
 
     /* heading sizes */
-    --heading-font-size-xxl: 45px;
-    --heading-font-size-xl: 36px;
+    --heading-font-size-xxl: 4.5rem;
+    --heading-font-size-xl: 3rem;
     --heading-font-size-l: 28px;
     --heading-font-size-m: 22px;
     --heading-font-size-s: 20px;
@@ -75,12 +75,16 @@
   }
 }
 
+html {
+	font-size: 16px;
+}
+
 body {
   display: none;
   margin: 0;
   background-color: var(--background-color);
   color: var(--text-color);
-  font-family: var(--body-font-family);
+	font-family: var(--body-font-family), sans-serif;
   font-size: var(--body-font-size-m);
   line-height: 1.6;
 }
@@ -129,6 +133,7 @@ h2 {
 	line-height: 3.5rem;
 	font-weight: 400;
 	letter-spacing: -0.02em;
+	margin-bottom: 4rem;
 }
 
 h3 { font-size: var(--heading-font-size-l); }
@@ -192,7 +197,7 @@ button {
   border: 2px solid transparent;
   border-radius: 2.4em;
   padding: 0.5em 1.2em;
-  font-family: var(--body-font-family);
+	font-family: var(--body-font-family), sans-serif;
   font-style: normal;
   font-weight: 500;
   line-height: 1.25;
@@ -254,9 +259,19 @@ main > .section.hero-container {
 }
 
 main > .section > div {
-  max-width: 1200px;
+  max-width: 1536px;
   margin: auto;
   padding: 0 24px;
+}
+
+main > .section > div > p.section-title {
+	font-family: KONE, sans-serif;
+	font-size: 1rem;
+	line-height: 1.5rem;
+	letter-spacing: 0.05em;
+	text-transform: uppercase;
+	margin-bottom: 2rem;
+	margin-top: 0;
 }
 
 main > .section:first-of-type {
